<resources>
    <string name="app_name">Stomat</string>
    <string name="title_home">Home</string>
    <string name="title_catalog">Catalog</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_cart">Cart</string>
    <string name="title_profile">Profile</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_u"><u>Sign Up</u></string>
    <string name="sign_in_u"><u>Sign In</u></string>
    <string name="user_name">User Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="enter">Enter</string>
    <string name="forgot_password_u"><u>Forgot password</u></string>
    <string name="password_recovery">Password Recovery</string>
    <string name="recovery">Recovery</string>
    <string name="register">Register</string>
    <string name="please_wait">Please wait ...</string>
    <string name="confirm_code">Confirm code</string>
    <string name="code">Code</string>
    <string name="confirm">Confirm</string>
    <string name="exit">exit</string>
    <string name="courses">Courses</string>
    <string name="equipment">Equipment</string>
    <string name="instruments">Instruments</string>
    <string name="lecturers">lecturers</string>
    <string name="level2">level2</string>
    <string name="search">Search</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="delete_from_cart">Delete from cart</string>
    <string name="cart">Cart</string>
    <string name="add_item_to_cart">add item to cart</string>
    <string name="buy">Buy</string>
    <string name="name">Name*</string>
    <string name="second_name">Second Name*</string>
    <string name="phone">Phone*</string>
    <string name="city">City*</string>
    <string name="save">Save</string>
    <string name="logout">Logout</string>
</resources>