<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/HomeFragment"
        android:icon="@drawable/ic_home"
        android:title="Home" />

    <item
        android:id="@+id/CatalogFragment"
        android:icon="@drawable/ic_catalog"
        android:title="@string/title_catalog" />

    <item
        android:id="@+id/CartFragment"
        android:icon="@drawable/ic_cart"
        android:title="@string/title_cart" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/ProfileFragment"
        android:icon="@drawable/ic_profile"
        android:title="@string/title_profile" />

</menu>